payment for orders initial UI fr selected purchase order
date picker styling

--- a/src/main/resources/com/vertex/vos/PurchaseOrdersPerSupplierForPayment.fxml
+++ b/src/main/resources/com/vertex/vos/PurchaseOrdersPerSupplierForPayment.fxml
@@ -24,7 +24,7 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <VBox spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox focusTraversable="true" spacing="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox spacing="10.0">
                <children>
