--- a/src/main/resources/com/vertex/vos/PayablesForm.fxml
+++ b/src/main/resources/com/vertex/vos/PayablesForm.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -144,17 +143,7 @@
                                 <content>
                                     <AnchorPane minHeight="0.0" minWidth="0.0">
                                         <children>
-                                            <TableView stylesheets="@assets/table.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                                <columns>
-                                                    <TableColumn prefWidth="75.0" text="Product Description" />
-                                                    <TableColumn prefWidth="75.0" text="Unit" />
-                                       <TableColumn prefWidth="75.0" text="Unit Price" />
-                                                    <TableColumn prefWidth="75.0" text="Quantities" />
-                                                    <TableColumn prefWidth="75.0" text="Net" />
-                                                    <TableColumn prefWidth="75.0" text="EWT" />
-                                                    <TableColumn prefWidth="75.0" text="VAT" />
-                                                    <TableColumn prefWidth="75.0" text="Total Amount" />
-                                                </columns>
+                                            <TableView fx:id="productsTable" stylesheets="@assets/table.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                 <columnResizePolicy>
                                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                                 </columnResizePolicy>
@@ -167,11 +156,7 @@
                                 <content>
                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                         <children>
-                                            <TableView stylesheets="@assets/table.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                                <columns>
-                                                    <TableColumn prefWidth="75.0" text="Remarks" />
-                                                    <TableColumn prefWidth="75.0" text="Amount" />
-                                                </columns>
+                                            <TableView fx:id="adjustmentsTable" stylesheets="@assets/table.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                 <columnResizePolicy>
                                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                                 </columnResizePolicy>
