--- a/src/main/resources/com/vertex/vos/supplierAccounts.fxml
+++ b/src/main/resources/com/vertex/vos/supplierAccounts.fxml
@@ -8,20 +8,28 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-
+<?import javafx.scene.layout.VBox?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SupplierAccountsController">
    <children>
-      <HBox spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox layoutX="10.0" layoutY="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label styleClass="header" text="Supplier Report" />
-            <ComboBox fx:id="supplier" editable="true" />
-            <ComboBox fx:id="type" editable="true" layoutX="80.0" layoutY="10.0" />
-            <DatePicker fx:id="dateStart" promptText="Start Range" />
-            <DatePicker fx:id="dateEnd" layoutX="382.0" layoutY="10.0" promptText="End Range" />
+            <HBox alignment="TOP_RIGHT">
+               <children>
+                  <Label styleClass="header" text="Supplier Report" />
+               </children>
+            </HBox>
+            <HBox spacing="10.0">
+               <children>
+                  <ComboBox fx:id="supplier" editable="true" />
+                  <ComboBox fx:id="type" editable="true" layoutX="80.0" layoutY="10.0" />
+                  <DatePicker fx:id="dateStart" promptText="Start Range" />
+                  <DatePicker fx:id="dateEnd" layoutX="382.0" layoutY="10.0" promptText="End Range" />
+               </children>
+            </HBox>
          </children>
-      </HBox>
-      <TableView fx:id="accountTable" layoutX="20.0" layoutY="200.0" stylesheets="@assets/table.css" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="50.0">
+      </VBox>
+      <TableView fx:id="accountTable" layoutX="20.0" layoutY="200.0" stylesheets="@assets/table.css" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="80.0">
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
