--- a/src/main/resources/com/vertex/vos/purchaseOrderConfirmationAccounting.fxml
+++ b/src/main/resources/com/vertex/vos/purchaseOrderConfirmationAccounting.fxml
@@ -31,24 +31,24 @@
                   <TextField fx:id="supplierSearchBar" layoutX="464.0" layoutY="15.0" promptText="Search Supplier " />
                </children>
             </HBox>
-            <TableView fx:id="tablePOConfirmation" stylesheets="@assets/table.css">
-              <columns>
-                <TableColumn fx:id="id" prefWidth="75.0" text="PO NO" />
-                  <TableColumn fx:id="type_of_transaction" prefWidth="75.0" text="Type of Transaction" />
-                  <TableColumn fx:id="supplier_name" prefWidth="75.0" text="Supplier Name" />
-                <TableColumn fx:id="date_requested" prefWidth="75.0" text="Date Requested" />
-                  <TableColumn fx:id="inventory_status" prefWidth="75.0" text="Inventory Status" />
-                  <TableColumn fx:id="payment_status" prefWidth="75.0" text="Payment Status" />
-              </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </VBox>
+      <TableView fx:id="tablePOConfirmation" stylesheets="@assets/table.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="65.0">
+        <columns>
+          <TableColumn fx:id="id" prefWidth="75.0" text="PO NO" />
+            <TableColumn fx:id="type_of_transaction" prefWidth="75.0" text="Type of Transaction" />
+            <TableColumn fx:id="supplier_name" prefWidth="75.0" text="Supplier Name" />
+          <TableColumn fx:id="date_requested" prefWidth="75.0" text="Date Requested" />
+            <TableColumn fx:id="inventory_status" prefWidth="75.0" text="Inventory Status" />
+            <TableColumn fx:id="payment_status" prefWidth="75.0" text="Payment Status" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
    </children>
    <stylesheets>
       <URL value="@assets/style.css" />
