Logistics Trip Summary

--- a/src/main/resources/com/vertex/vos/SalesInvoiceReceiptPrintables.fxml
+++ b/src/main/resources/com/vertex/vos/SalesInvoiceReceiptPrintables.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="979.2" prefWidth="787.2" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesInvoiceReceiptPrintablesController">
+<AnchorPane prefHeight="982.6771653543307" prefWidth="755.9055118110235" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesInvoiceReceiptPrintablesController">
    <children>
       <VBox fx:id="containerBox" layoutX="227.0" layoutY="304.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
