--- a/src/main/resources/com/vertex/vos/InternalOperationsContent.fxml
+++ b/src/main/resources/com/vertex/vos/InternalOperationsContent.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 
-<AnchorPane minHeight="600.0" minWidth="800.0" style="-fx-background-color: #f0f0f0; -fx-background-radius: 20px 0px 0px 0px;" stylesheets="@assets/style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.InternalOperationsContentController">
+<AnchorPane minHeight="600.0" minWidth="800.0" style="-fx-background-color: #f0f0f0; -fx-background-radius: 20px 0px 0px 0px;" stylesheets="@assets/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.InternalOperationsContentController">
    <children>
       <AnchorPane layoutX="10.0" layoutY="10.0" style="-fx-background-color: #f0f0f0; -fx-background-radius: 20px 0px 0px 0px;">
          <children>
@@ -27,7 +27,7 @@
                         <Label style="-fx-font-size: 25px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-weight: 700;" styleClass="text-title-logo" text="Internal Operations" />
                      </children>
                   </HBox>
-                  <TilePane hgap="20.0" vgap="20.0">
+                  <TilePane hgap="20.0" prefColumns="3" vgap="20.0">
                      <children>
                         <VBox fx:id="openReceiving" alignment="CENTER_LEFT" maxWidth="200.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                            <children>
