--- a/src/main/resources/com/vertex/vos/PayablesForm.fxml
+++ b/src/main/resources/com/vertex/vos/PayablesForm.fxml
@@ -11,13 +11,17 @@
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.PayablesFormController">
+<AnchorPane prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.PayablesFormController">
     <ScrollPane fitToHeight="true" fitToWidth="true" pannable="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <content>
             <VBox fx:id="POContent" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" style="-fx-background-color: transparent;">
@@ -143,7 +147,7 @@
                                 <content>
                                     <AnchorPane minHeight="0.0" minWidth="0.0">
                                         <children>
-                                            <TableView fx:id="productsTable" stylesheets="@assets/table.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                            <TableView fx:id="productsTable" editable="true" stylesheets="@assets/table.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                 <columnResizePolicy>
                                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                                 </columnResizePolicy>
@@ -167,22 +171,25 @@
                             </Tab>
                         </tabs>
                     </TabPane>
-                    <VBox fx:id="totalVBox" spacing="10.0">
-                        <children>
-                            <HBox fx:id="totalBox" alignment="CENTER_RIGHT" spacing="20.0">
-                                <children>
-                                    <VBox fx:id="totalBoxLabels" alignment="CENTER_RIGHT" spacing="5.0">
-                                        <children>
-                                            <Label fx:id="grandTotal" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Grand Total : " />
-                                        </children>
-                                    </VBox>
-                                </children>
-                                <VBox.margin>
-                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                </VBox.margin>
-                            </HBox>
-                        </children>
-                    </VBox>
+               <GridPane alignment="CENTER_LEFT" hgap="15.0" maxWidth="500.0" vgap="15.0">
+                 <columnConstraints>
+                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="873.0" minWidth="10.0" prefWidth="168.0" />
+                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="863.0" minWidth="10.0" prefWidth="317.0" />
+                 </columnConstraints>
+                 <rowConstraints>
+                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                 </rowConstraints>
+                  <children>
+                     <TextField fx:id="paidAmount" prefWidth="889.0" GridPane.columnIndex="1" />
+                     <Label prefWidth="145.0" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Payment Amount : " />
+                                <Label style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Total Amounts Payable : " GridPane.rowIndex="2" />
+                     <TextField fx:id="grandTotal" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                     <Label prefWidth="145.0" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Paid Amount : " GridPane.rowIndex="1" />
+                     <TextField fx:id="paidAmountTotal" prefWidth="889.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  </children>
+               </GridPane>
                     <HBox fx:id="confirmBox" alignment="CENTER_RIGHT">
                         <children>
                             <Button fx:id="confirmButton" mnemonicParsing="false" styleClass="text-input" stylesheets="@assets/style.css" text="Confirm" />
