--- a/src/main/resources/com/vertex/vos/PayablesForm.fxml
+++ b/src/main/resources/com/vertex/vos/PayablesForm.fxml
@@ -182,17 +182,18 @@
                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                  </rowConstraints>
                   <children>
-                     <TextField fx:id="paidAmount" prefWidth="889.0" GridPane.columnIndex="1" />
+                     <TextField fx:id="paymentAmount" prefWidth="889.0" GridPane.columnIndex="1" />
                      <Label prefWidth="145.0" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Payment Amount : " />
-                                <Label style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Total Amounts Payable : " GridPane.rowIndex="2" />
-                     <TextField fx:id="grandTotal" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                <Label style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Balance : " GridPane.rowIndex="2" />
+                     <TextField fx:id="balance" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                      <Label prefWidth="145.0" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Paid Amount : " GridPane.rowIndex="1" />
-                     <TextField fx:id="paidAmountTotal" prefWidth="889.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                     <TextField fx:id="paidAmountTextField" prefWidth="889.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   </children>
                </GridPane>
-                    <HBox fx:id="confirmBox" alignment="CENTER_RIGHT">
+                    <HBox fx:id="confirmBox" alignment="CENTER_RIGHT" spacing="10.0">
                         <children>
-                            <Button fx:id="confirmButton" mnemonicParsing="false" styleClass="text-input" stylesheets="@assets/style.css" text="Confirm" />
+                            <Button fx:id="holdButton" mnemonicParsing="false" styleClass="text-input" stylesheets="@assets/style.css" text="Hold" />
+                     <Button fx:id="confirmButton" layoutX="818.0" layoutY="10.0" mnemonicParsing="false" styleClass="text-input" stylesheets="@assets/style.css" text="Confirm" />
                         </children>
                         <VBox.margin>
                             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
