--- a/src/main/resources/com/vertex/vos/AccountingContent.fxml
+++ b/src/main/resources/com/vertex/vos/AccountingContent.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane style="-fx-background-color: #f0f0f0; -fx-background-radius: 20px 0px 0px 0px;" stylesheets="@assets/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.AccountingContentController">
    <children>
-      <AnchorPane layoutX="10.0" layoutY="10.0" style="-fx-background-color: #f0f0f0; -fx-background-radius: 20px 0px 0px 0px;">
+      <AnchorPane layoutX="10.0" layoutY="10.0" style="-fx-background-color: #f0f0f0; -fx-background-radius: 20px 0px 0px 0px;" AnchorPane.topAnchor="10.0">
          <children>
             <VBox alignment="CENTER_LEFT" layoutX="11.0" layoutY="11.0" spacing="30.0" style="-fx-background-color: #f0f0f0;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
