--- a/src/main/resources/com/vertex/vos/supplierInfoRegistration.fxml
+++ b/src/main/resources/com/vertex/vos/supplierInfoRegistration.fxml
@@ -3,6 +3,7 @@
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -25,6 +26,7 @@
                      </image>
                   </ImageView>
                   <Label fx:id="supplierNameHeaderLabel" style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="header" stylesheets="@assets/style.css" text="Supplier Registration" />
+                  <CheckBox fx:id="isActive" mnemonicParsing="false" text="Active" />
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" spacing="10.0">
