--- a/src/main/resources/com/vertex/vos/SalesInvoice.fxml
+++ b/src/main/resources/com/vertex/vos/SalesInvoice.fxml
@@ -36,44 +36,44 @@
                                                 <Label fx:id="paymentTerms" style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-size: 16;" styleClass="header" stylesheets="@assets/style.css" />
                                             </children>
                                         </HBox>
-                                        <HBox fx:id="statusBox" alignment="CENTER" layoutX="724.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                            <children>
-                                                <Label fx:id="statusLabel" style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-size: 16;" styleClass="header" stylesheets="@assets/style.css" text="STATUS" />
-                                                <ImageView fx:id="statusImage" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                                                    <image>
-                                                        <Image url="@assets/icons/Invoice.png" />
-                                                    </image>
-                                                </ImageView>
-                                            </children>
-                                        </HBox>
+                              <HBox layoutX="411.0" layoutY="-1.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <children>
+                                              <HBox fx:id="statusBox" alignment="CENTER" spacing="10.0">
+                                                  <children>
+                                                      <Label fx:id="statusLabel" style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-size: 16;" styleClass="header" stylesheets="@assets/style.css" text="STATUS" />
+                                                      <ImageView fx:id="statusImage" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                                          <image>
+                                                              <Image url="@assets/icons/Invoice.png" />
+                                                          </image>
+                                                      </ImageView>
+                                                  </children>
+                                              </HBox>
+                                 </children>
+                              </HBox>
                                     </children>
                                 </AnchorPane>
                         <HBox alignment="CENTER_LEFT" spacing="10.0">
                            <children>
-                              <VBox fx:id="invoiceTypeBox">
+                                        <VBox fx:id="salesmanBox">
+                                            <children>
+                                                <Label text="Salesman Name">
+                                                    <VBox.margin>
+                                                        <Insets left="10.0" />
+                                                    </VBox.margin>
+                                                </Label>
+                                                <ComboBox fx:id="salesman" editable="true" prefWidth="150.0" />
+                                            </children>
+                                        </VBox>
+                              <VBox layoutX="10.0" layoutY="10.0">
                                  <children>
-                                    <Label text="Invoice Type">
+                                    <Label text="Source Branch">
                                        <VBox.margin>
                                           <Insets left="10.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <ComboBox fx:id="invoiceTypeComboBox" editable="true" />
+                                    <ComboBox fx:id="branch" editable="true" prefWidth="150.0" />
                                  </children>
                               </VBox>
-                              <VBox fx:id="dateOrderedBox1">
-                                 <children>
-                                    <Label text="Invoice Date">
-                                       <VBox.margin>
-                                          <Insets left="10.0" />
-                                       </VBox.margin>
-                                    </Label>
-                                    <DatePicker fx:id="dateOrdered1" />
-                                 </children>
-                              </VBox>
-                           </children>
-                        </HBox>
-                                <HBox alignment="CENTER_LEFT" layoutX="40.0" layoutY="71.0" spacing="10.0">
-                                    <children>
                                         <VBox fx:id="customerBox">
                                             <children>
                                                 <Label text="Store Name">
@@ -84,30 +84,20 @@
                                                 <ComboBox fx:id="customer" editable="true" prefWidth="150.0" />
                                             </children>
                                         </VBox>
-                                        <VBox fx:id="salesmanBox" layoutX="10.0" layoutY="10.0">
-                                            <children>
-                                                <Label text="Salesman Name">
-                                                    <VBox.margin>
-                                                        <Insets left="10.0" />
-                                                    </VBox.margin>
-                                                </Label>
-                                                <ComboBox fx:id="salesman" editable="true" prefWidth="150.0" />
-                                            </children>
-                                        </VBox>
-                                        <VBox fx:id="dateOrderedBox">
-                                            <children>
-                                                <Label text="Date Ordered">
-                                                    <VBox.margin>
-                                                        <Insets left="10.0" />
-                                                    </VBox.margin>
-                                                </Label>
-                                                <DatePicker fx:id="dateOrdered" />
-                                            </children>
-                                        </VBox>
-                                    </children>
-                                </HBox>
-                        <HBox alignment="CENTER_LEFT" layoutX="41.0" layoutY="98.0" spacing="10.0">
-                           <children>
+                              <VBox fx:id="invoiceTypeBox" prefWidth="200.0">
+                                 <children>
+                                    <Label text="Invoice Type">
+                                       <VBox.margin>
+                                          <Insets left="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <ComboBox fx:id="invoiceTypeComboBox" editable="true" />
+                                 </children>
+                              </VBox>
+                           </children>
+                        </HBox>
+                                <HBox alignment="CENTER_LEFT" layoutX="40.0" layoutY="71.0" spacing="10.0">
+                                    <children>
                               <VBox fx:id="deliveryDateBox">
                                  <children>
                                     <Label text="Delivery Date">
@@ -133,8 +123,68 @@
                                     <DatePicker fx:id="paymentDueDate" />
                                  </children>
                               </VBox>
+                              <VBox fx:id="dateOrderedBox1">
+                                 <children>
+                                    <Label text="Invoice Date">
+                                       <VBox.margin>
+                                          <Insets left="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <DatePicker fx:id="invoiceDate" />
+                                 </children>
+                              </VBox>
+                                        <VBox fx:id="dateOrderedBox">
+                                            <children>
+                                                <Label text="Date Ordered">
+                                                    <VBox.margin>
+                                                        <Insets left="10.0" />
+                                                    </VBox.margin>
+                                                </Label>
+                                                <DatePicker fx:id="dateOrdered" />
+                                            </children>
+                                        </VBox>
+                                    </children>
+                                </HBox>
+                        <VBox fx:id="addBoxes">
+                           <children>
+                              <HBox fx:id="addDebitMemo" alignment="CENTER_LEFT" spacing="10.0">
+                                 <children>
+                                    <VBox>
+                                       <children>
+                                          <HBox alignment="CENTER_LEFT">
+                                             <children>
+                                                <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@assets/icons/Add.png" />
+                                                   </image>
+                                                </ImageView>
+                                                <Label fx:id="addProductLabel" style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-size: 15;" styleClass="sub-header" text="Add Debit Memo" />
+                                             </children>
+                                          </HBox>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </HBox>
+                              <HBox fx:id="addCreditMemo" alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" spacing="10.0">
+                                 <children>
+                                    <VBox>
+                                       <children>
+                                          <HBox alignment="CENTER_LEFT">
+                                             <children>
+                                                <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@assets/icons/Add.png" />
+                                                   </image>
+                                                </ImageView>
+                                                <Label fx:id="addProductLabel1" style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-size: 15;" styleClass="sub-header" text="Add Credit Memo" />
+                                             </children>
+                                          </HBox>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </HBox>
                            </children>
-                        </HBox>
+                        </VBox>
                             </children>
                             <padding>
                                 <Insets bottom="15.0" left="30.0" right="30.0" top="15.0" />
@@ -144,7 +194,7 @@
                                 <URL value="@assets/global.css" />
                             </stylesheets>
                         </VBox>
-                  <TabPane fx:id="salesInvoices" />
+                  <TabPane fx:id="salesOrderTab" minHeight="400.0" />
                         <VBox fx:id="totalVBox" spacing="10.0">
                             <children>
                                 <HBox fx:id="totalBox" alignment="CENTER_RIGHT" spacing="20.0">
