--- a/src/main/resources/com/vertex/vos/disbursementAccounting.fxml
+++ b/src/main/resources/com/vertex/vos/disbursementAccounting.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
-
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-padding: 10;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.DisbursementAccounting">
    <stylesheets>
@@ -14,25 +15,48 @@
       <URL value="@assets/style.css" />
    </stylesheets>
    <children>
-      <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox fx:id="header">
                <children>
                   <Label styleClass="header" text="Disbursement" />
                </children>
             </HBox>
-            <VBox fx:id="chartOfAccount">
+            <TilePane>
                <children>
-                  <Label text="Account Debited" />
-                  <ComboBox fx:id="accountDebitedComboBox" editable="true" />
+                  <VBox fx:id="accountDebitedBox">
+                     <children>
+                        <Label text="Account Debited" />
+                        <ComboBox fx:id="accountDebitedComboBox" editable="true" />
+                     </children>
+                  </VBox>
+                  <VBox fx:id="accountCreditedBox">
+                     <children>
+                        <Label text="Account  Credited" />
+                        <ComboBox fx:id="accountDebitedComboBox1" editable="true" />
+                     </children>
+                  </VBox>
+                  <VBox fx:id="reasonBox">
+                     <children>
+                        <Label text="Reason" />
+                        <ComboBox fx:id="accountDebitedComboBox11" editable="true" />
+                     </children>
+                  </VBox>
+                  <VBox fx:id="employeeNameBox">
+                     <children>
+                        <Label text="Employee Name" />
+                        <ComboBox fx:id="accountDebitedComboBox111" editable="true" />
+                     </children>
+                  </VBox>
+                  <VBox fx:id="amountBox">
+                     <children>
+                        <Label text="Amount" />
+                        <ComboBox fx:id="accountDebitedComboBox1111" editable="true" />
+                     </children>
+                  </VBox>
                </children>
-            </VBox>
-            <VBox fx:id="chartOfAccount1">
-               <children>
-                  <Label text="Account  Credited" />
-                  <ComboBox fx:id="accountDebitedComboBox1" editable="true" />
-               </children>
-            </VBox>
+            </TilePane>
+            <Button mnemonicParsing="false" text="Confirm" />
          </children>
       </VBox>
    </children>
